--- a/app/package.json
+++ b/app/package.json
@@ -13,9 +13,12 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
+    "@unform/core": "^2.1.3",
+    "@unform/mobile": "^2.1.3",
     "react": "16.13.1",
     "react-native": "0.63.2",
     "react-native-gesture-handler": "^1.8.0",
+    "react-native-iphone-x-helper": "^1.2.1",
     "react-native-reanimated": "^1.13.0",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.11.0",
