--- a/backend/ormconfig.json
+++ b/backend/ormconfig.json
@@ -5,10 +5,10 @@
   "username": "postgres",
   "password": "docker",
   "database": "gobarber",
-  "entities": ["./src/models/*.ts"],
-  "migrations": ["./src/database/migrations/*.ts"],
+  "entities": ["./src/modules/**/infra/typeorm/entities/*.ts"],
+  "migrations": ["./src/shared/infra/typeorm/migrations/*.ts"],
   "cli": {
-    "migrationsDir": "./src/database/migrations"
+    "migrationsDir": "./src/shared/infra/typeorm/migrations/*.ts"
   },
   "logging": true
 }
