--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.6",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.6.2",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.14",
     "pg": "^8.3.3",
@@ -31,6 +32,7 @@
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.14",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/mongodb": "^3.5.28",
     "@types/multer": "^1.4.4",
     "@types/nodemailer": "^6.4.0",
     "jest": "^26.4.2",
