--- a/backend/package.json
+++ b/backend/package.json
@@ -20,11 +20,15 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.6",
+    "ioredis": "^4.19.4",
     "jsonwebtoken": "^8.5.1",
+    "mime": "^2.4.7",
     "mongodb": "^3.6.2",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.14",
     "pg": "^8.3.3",
+    "rate-limiter-flexible": "^2.1.15",
+    "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.3.0",
     "typeorm": "^0.2.26",
@@ -34,11 +38,13 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.8",
+    "@types/ioredis": "^4.17.10",
     "@types/jest": "^26.0.14",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongodb": "^3.5.28",
     "@types/multer": "^1.4.4",
     "@types/nodemailer": "^6.4.0",
+    "@types/redis": "^2.8.28",
     "jest": "^26.4.2",
     "ts-jest": "^26.4.0",
     "ts-node-dev": "^1.0.0-pre.62",
