--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,7 @@
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "3.4.0",
     "react-spring": "^8.0.27",
     "styled-components": "^5.2.0",
     "typescript": "~3.7.2",
@@ -31,6 +31,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:coverage": "react-scripts test --coverage --watchAll false",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -49,9 +50,11 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react-hooks": "^5.1.0",
     "@types/axios": "^0.14.0",
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.3",
-    "@types/yup": "^0.29.7"
+    "@types/yup": "^0.29.7",
+    "axios-mock-adapter": "^1.19.0"
   }
 }
